--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -192,12 +192,14 @@ a:active
 //MENU
 .menu__wrp
   position: fixed
-  bottom: 42px
+  bottom: 32px
   width: 32px
   left: 50%
   transform: translateX(-50%)
   z-index: 40
   cursor: pointer
+  padding-top: 10px
+  padding-bottom: 10px
 
 .menu__line
   height: 3px
@@ -233,7 +235,7 @@ a:active
 @media all and (max-width: $phone-width)
   .menu__wrp
     width: 24px
-    bottom: 24px
+    bottom: 14px
   .menu__line
     height: 2px
     border-radius: 2px
