--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -225,6 +225,9 @@ a:active
 .menu__link + .menu__link
   margin-top: 8vh
 
+.menu__wrp.opened
+  bottom: 36px
+
 .menu__wrp.opened .menu__line:nth-child(2)
   margin-top: -2px
   transform: rotate(-45deg)
@@ -236,6 +239,8 @@ a:active
   .menu__wrp
     width: 24px
     bottom: 14px
+  .menu__wrp.opened
+    bottom: 18px
   .menu__line
     height: 2px
     border-radius: 2px
