--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1,5 +1,8 @@
 @import './variables.scss'
 
+*
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important
+
 body, html
   padding: 0
   margin: 0
